manifests/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: wp-mysql
  namespace: wordpress
  labels:
    app: wordpress
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: backend
    spec:
      containers: 
      - name: mysql-container
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
         - name: mysql-data
           mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
